Change to Java 16 and add more exceptions to AudioPlayer setup